# rust-axum-surrealdb-tauri-yew

backend/: Cargo.toml
frontend/: Cargo.toml  global.scss  index.html  tailwind.config.js
frontend/src/: app.rs
frontend/src/components/: navbar.rs
frontend/src/pages/: hello.rs  home.rs  mod.rs
frontend/src/pages/boids/: boid.rs  boids.scss  mod.rs  simulation.rs
