[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
gloo = "0.10"
console_error_panic_hook = "0.1.7"
gloo-net = "0.4"
log = "0.4.17"

[dependencies.web-sys]
version = "0.3"
features = ["HtmlInputElement"]
